--- a/CppAndPython/CppAndPython.vcxproj.filters
+++ b/CppAndPython/CppAndPython.vcxproj.filters
@@ -30,4 +30,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="plotting.py">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
